[tool.poetry]
name = "todo"
version = "0.1.0"
description = "a simple flask to-do app"
authors = ["minalike"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
